--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="price">$149.99</p>
         <p class="price-off">$169.99</p>
       </div>
-      <button class="info__button"><img class="button__img" src="images/icon-cart.svg" alt="Añadir al carrito">Add to
+      <button class="info__button"><img class="button__img" src="images/icon-cart.svg" alt="">Add to
         Cart</button>
     </div>
 
